--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
